--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ html{
     display: none;
 }
 
+.stop-scrolling{
+    overflow: hidden;
+}
+
 .scroll-up-btn{
     position: fixed;
     height: 45px;
@@ -150,6 +154,21 @@ html{
     font-weight: 500;
 }
 
+.home .home-content .icons a i{
+    font-size: 25px;
+    padding-right: 10px;
+    margin-top: 10px;
+    margin-left: 5px;
+    color: #fff;
+    transition: color 0.3s ease;
+}
+
+.home .home-content .icons a i:hover{
+    color: crimson;
+    transform: scale(0.97);
+}
+
+
 /*All Similar style code */
 section{
     padding: 100px 0;
@@ -170,6 +189,7 @@ section .title{
     font-size: 40px;
     font-weight: 500;
     text-align: center;
+    margin-top: -5%;
     margin-bottom: 60px;
     padding-bottom: 20px;
     font-family: 'Ubuntu',sans-serif;
@@ -488,6 +508,15 @@ section .title::after{
     color: crimson;
 }
 
+.contact .contact-contents .row a{
+    padding-right: 10px;
+    transition: color 0.3s ease;
+}
+
+.contact .contact-contents .row a:hover{
+    transform: scale(0.97);
+}
+
 .contact .contact-contents .info .head{
     font-weight: 500;
 }
@@ -697,6 +726,14 @@ footer span a:hover{
     #school{
         padding-bottom: 20px;
     }
+
+    .education{
+        height: 120vh;
+    }
+
+    .project{
+        height: 115vh;
+    }
 }
 
 @media(max-width: 690px){
@@ -712,8 +749,6 @@ footer span a:hover{
         margin-bottom: 20px;
     }
     .education{
-        margin-top: 15%;
-        margin-bottom: -15%;
         height: 142vh;
     }
     .education .education-content .card{
@@ -749,37 +784,36 @@ footer span a:hover{
         margin-top: 20%;
     }
     .about{
-        margin-bottom: 70%;
+        margin-bottom: 40%;
     }
     .education{
-        height: 175vh;
+        height: 165vh;
     }
 
     .skills{
-        margin-bottom: 50%;
+        margin-bottom: 30%;
     }
 
     .project{
-        height: 180vh;
-    }
-
-    .contact{
-        margin-top: -15%;
+        height: 170vh;
     }
 }
 
 @media(max-width: 425px){
     .education{
         margin-top: 15%;
-        height: 175vh;
+        height: 170vh;
     }
 
     .project{
-        height: 165vh;
+        height: 160vh;
     }
 
-    .contact{
-        margin-top: -15%;
+    .skills{
+        margin-bottom: 40%;
+    }
+    .about{
+        margin-bottom: 50%;
     }
 }
 
@@ -790,11 +824,15 @@ footer span a:hover{
     }  
 
     .project{
-        height: 155vh;
+        height: 150vh;
     }
 
-    .contact{
-        margin-top: -15%;
+    .skills{
+        margin-bottom: 50%;
+    }
+
+    .about{
+        margin-bottom: 70%;
     }
 }
 
